Módulo Rol 90% - realiza un CRUD, aun no se completa la validación de formularios.

--- a/public/css/plantilla.css
+++ b/public/css/plantilla.css
@@ -9266,3 +9266,22 @@ hr.transparent {
       float: left; }
   *[dir="rtl"] .callout-default {
     border-right-color: #536c79; }
+
+.modal-content{
+    width: 100% !important;
+    position: absolute !important;
+}
+.mostrar{
+    display: list-item !important;
+    opacity: 1 !important;
+    position: absolute !important;
+    background-color: #3c29297a !important;
+}
+.div-error{
+    display: flex;
+    justify-content: center;
+}
+.text-error{
+    color: red !important;
+    font-weight: bold;
+}
