[admin] products load image demo

--- a/admin/resources/sass/_products.scss
+++ b/admin/resources/sass/_products.scss
@@ -19,3 +19,20 @@
     left: 0;
   }
 }
+
+.products {
+  &-title {
+    h3 {
+      z-index: 1;
+      text-transform: uppercase;
+    }
+  }
+  &-body{
+    z-index: 1;
+    position: relative;
+  }
+}
+
+.margin-top-2-por{
+  margin-top: 2%;
+}
