--- a/admin/resources/sass/styles-admin.scss
+++ b/admin/resources/sass/styles-admin.scss
@@ -1,4 +1,5 @@
 @import "general";
+@import "variables";
 @import "products";
 @import "loading";
 
@@ -33,3 +34,5 @@
         font-size: 16px;
     }
 }
+
+@import "service";
