[admin] service workers

--- a/admin/resources/sass/_general.scss
+++ b/admin/resources/sass/_general.scss
@@ -1,3 +1,47 @@
 .btn{
   margin-left: 0px !important;
 }
+
+.bd-callout {
+    padding: 10px;
+    margin: 20px 0;
+    border-left: 1px solid $primary;
+    border-left-width: 5px;
+    border-radius: 3px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, .5);
+
+    h6: {
+        margin-top: 0;
+        margin-bottom: 5px;
+    }
+
+    p:last-child {
+        margin-bottom: 0;
+        font-size: 13px;
+        text-align: justify;
+    }
+
+    code {
+        border-radius: 3px;
+        color: $pink2;
+    }
+
+    & + .bs-callout {
+        margin-top: -5px;
+    }
+}
+
+@each $name,$color in
+(default,#777),
+(primary,$primary),
+(success,#5cb85c),
+(danger,#d9534f),
+(warning,#f0ad4e),
+(info,#5bc0de) {
+    .bd-callout-#{$name} {
+        border-left-color: $color;
+        h6 {
+          color: $color;
+        }
+    }
+}
